--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,12 +21,12 @@
 
 domain: vladdedita.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://vladdedita.github.io  # the base hostname and protocol for your site, e.g. http://example.com
-baseurl: /blog/      # place folder name if the site is served in a subfolder
+baseurl: /docs     # place folder name if the site is served in a subfolder
 
 
 
-title: Your awesome title
-email: your-email@example.com
+title: Everyday Java & Spring Boot
+email: vlad.dedita@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
